backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app
  labels:
    app: chatapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatapp
      tier: backend
  template:
    metadata:
      labels:
        app: chatapp
        tier: backend
    spec:
      containers:
      - name: backend-app
        image: mycontainerrregistry.azurecr.io/my-new-django-app:latest
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: backend-app
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: chatapp
    tier: backend
  type: ClusterIP
